--- a/.gitignore
+++ b/.gitignore
@@ -123,9 +123,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 postgresql.bak
-Einsatztage/migrations/__pycache__/
-Klienten/__pycache__/
-Klienten/migrations/__pycache__/
-Tour/__pycache__/
-buergerbus/__pycache__/
+Einsatztage/migrations/__pycache__/*
+Klienten/__pycache__/*
+Klienten/migrations/__pycache__/*
+Tour/__pycache__/*
+Tour/migrations/__pycache__/*
+buergerbus/__pycache__/*
 
