add apache restart trigger

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ Strassennamen.txt
 settings.json
 uploads/Buergerbus_Fahrplan_Bus_2_2019-12-116.pdf
 buergerbus/settings.ini
+uploads/trigger_apache_restart
